[tool.poetry]
name = "embedding-vis"
version = "0.1.0"
description = "Visualization of text clusters"
authors = ["Leo Innocenzi <leo.innocenzi@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
sentence-transformers = "^3.2.1"
tweet-preprocessor = "^0.6.0"
numba = "^0.60.0"
umap-learn = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
